# coreclr

./: .gitattributes  .modversion.ps1  .sln  .vssbe  CMakeLists.txt  ILAsm.nuspec  LICENSE.TXT  README.md  build-s.cmd  build.cmd  build.ilasm.cmd  build_s.cmd  pack.ps1
.tools/: ILAsm.nuspec
eng/: liveBuilds.targets
eng/native/version/: _version.h
src/: CMakeLists.txt
src/ToolBox/: CMakeLists.txt
src/binder/: CMakeLists.txt
src/coreclr/: CMakeLists.txt
src/coreclr/dlls/mscorpe/: CMakeLists.txt  ceefilegenwriter.cpp  iceefilegen.cpp
src/coreclr/dlls/mscorrc/: mscorrc.rc
src/coreclr/ilasm/: asmman.cpp  asmman.hpp  asmparse.y  assem.cpp  assembler.cpp  assembler.h  main.cpp  writer.cpp
src/coreclr/ildasm/: dasm.cpp  dasm.rc  windasm.cpp
src/coreclr/inc/: ceefilegenwriter.h  corerror.xml  iceefilegen.h  il_kywd.h  longfilepathwrappers.h  sstring.h  winwrap.h
src/coreclr/utilcode/: ex.cpp  longfilepathwrappers.cpp  sstring.cpp
src/debug/: CMakeLists.txt
src/dlls/: CMakeLists.txt
src/dlls/mscoree/coreclr/: CMakeLists.txt
src/dlls/mscorpe/: ceefilegenwriter.cpp  iceefilegen.cpp
src/gcinfo/: CMakeLists.txt
src/ilasm/: assem.cpp  assembler.cpp  assembler.h  main.cpp  writer.cpp
src/ildasm/: dasm.rc  windasm.cpp
src/inc/: ceefilegenwriter.h  iceefilegen.h
src/md/compiler/: CMakeLists.txt
src/md/enc/: CMakeLists.txt
src/md/hotdata/: CMakeLists.txt
src/md/runtime/: CMakeLists.txt
src/md/winmd/: CMakeLists.txt
src/strongname/api/: CMakeLists.txt
src/tests/: build.proj
src/utilcode/: CMakeLists.txt
(+7 files in other folders)
