if(WIN32)
    if(NOT GFLAG_COMPILE_WIN_SHORT)
        add_subdirectory(clretwrc)
    endif()
endif(WIN32)

if(NOT GFLAG_COMPILE_WIN_SHORT)
    add_subdirectory(dbgshim)
endif()
add_subdirectory(mscordbi)
add_subdirectory(mscordac)
add_subdirectory(mscoree)
add_subdirectory(mscorpe)
if(NOT GFLAG_COMPILE_WIN_SHORT)
    add_subdirectory(mscorrc)
endif()
